--- a/configs/benchmark_settings.cfg
+++ b/configs/benchmark_settings.cfg
@@ -1,6 +1,10 @@
 [profile_control]
 iters = 5
 secs = 10
+cuda_device_id = 0
+nvIns_device_id = 1
+rest_time = 15
+power_sample_interval = 500
 metrics = [
 			"achieved_occupancy",
 			"eligible_warps_per_cycle",
