--- a/configs/benchmark_settings.cfg
+++ b/configs/benchmark_settings.cfg
@@ -1,9 +1,9 @@
 [profile_control]
 iters = 5
-secs = 10
-cuda_device_id = 0
-nvIns_device_id = 1
-rest_time = 15
+secs = 20
+cuda_device_id = 1
+nvIns_device_id = 0
+rest_time = 2
 power_sample_interval = 500
 metrics = [
 			"achieved_occupancy",
@@ -18,7 +18,7 @@ metrics = [
 
 
 [dvfs_control]
-coreF = [400, 500, 600, 700, 800, 900, 1000]
-memF = [400, 500, 600, 700, 800, 900, 1000]
+coreF = [400]
+memF = [400,500]
 powerLim = [50, 70, 90, 110]
 
