--- a/configs/kernels_settings.cfg
+++ b/configs/kernels_settings.cfg
@@ -1,5 +1,41 @@
-[matrixMul(Global)]
-args = "-wA=1024 -hA=1024 -wB=1024 -hB=1024"
+[backprop]
+args = ["65536 -device=1 -iters=200"]
+kernels = [
+			"matrixMulCUDA"
+		]
+
+[bfs]
+args = ["./datasets/bfs/graph1MW_6.txt -device=0 -iters=200"]
+kernels = [
+			"matrixMulCUDA"
+		]
+
+[convolutionTexture]
+args = ["-device=1 -iters=200"]
+kernels = [
+			"matrixMulCUDA"
+		]
+
+[nn]
+args = ["./datasets/nn/filelist_4 -r 5 -lat 30 -lng 90 -device=1 -iters=200"]
+kernels = [
+			"matrixMulCUDA"
+		]
+
+[quasirandomGenerator]
+args = ["-device=1 -iters=200"]
+kernels = [
+			"matrixMulCUDA"
+		]
+
+[SobolQRNG]
+args = ["-device=1 -iters=2000"]
+kernels = [
+			"matrixMulCUDA"
+		]
+
+[histogram]
+args = ["-device=1 -iters=200"]
 kernels = [
 			"matrixMulCUDA"
 		]
