add linux support.

--- a/configs/kernels_settings.cfg
+++ b/configs/kernels_settings.cfg
@@ -1,131 +1,131 @@
-[backprop]
-args = ["65536"]
-kernels = [
-			"bpnn_layerforward_CUDA"
-		]
-
-[bfs]
-args = ["./datasets/bfs/graph1MW_6.txt"]
-kernels = [
-			"bfs"
-		]
-
-[binomialOptions]
-args = [""]
-kernels = [
-			"binomialOptionsKernel"
-		]
-
+# [backprop]
+# args = ["65536"]
+# kernels = [
+# 			"bpnn_layerforward_CUDA"
+# 		]
+# 
+# [bfs]
+# args = ["./datasets/bfs/graph1MW_6.txt"]
+# kernels = [
+# 			"bfs"
+# 		]
+# 
+# [binomialOptions]
+# args = [""]
+# kernels = [
+# 			"binomialOptionsKernel"
+# 		]
+# 
 [BlackScholes]
 args = [""]
 kernels = [
 			"BlackScholesGPU"
 		]
-
-[conjugateGradient]
-args = [""]
-kernels = [
-			"csrMv_kernel"
-		]
-
-[convolutionSeparable]
-args = [""]
-kernels = [
-			"convolutionRowsKernel"
-		]
-
-[convolutionTexture]
-args = [""]
-kernels = [
-			"convolutionRowsKernel"
-		]
-
-[fastWalshTransform]
-args = [""]
-kernels = [
-			"fwtBatch1Kernel"
-		]
-
-[histogram]
-args = [""]
-kernels = [
-			"histogram256Kernel"
-		]
-
-[hotspot]
-args = ["512 1 ./datasets/hotspot/temp_512 ./datasets/hotspot/power_512 output.out"]
-kernels = [
-			"calculate_temp"
-		]
-
-[matrixMul(Global)]
-args = ["-wA=1024 -hA=1024 -wB=1024 -hB=1024"]
-kernels = [
-			"matrixMulCUDA"
-		]
-
-[matrixMul]
-args = ["-wA=1024 -hA=1024 -wB=1024 -hB=1024"]
-kernels = [
-			"matrixMulCUDA"
-		]
-
-[nn]
-args = ["./datasets/nn/filelist_4 -r 5 -lat 30 -lng 90"]
-kernels = [
-			"euclid"
-		]
-
-[quasirandomGenerator]
-args = [""]
-kernels = [
-			"quasirandomGeneratorKernel"
-		]
-
-[reduction]
-args = ["-type=float --kernel=2"]
-kernels = [
-			"reduce2"
-		]
-
-[scalarProd]
-args = [""]
-kernels = [
-			"scalarProdGPU"
-		]
-
-[scan]
-args = [""]
-kernels = [
-			"scanExclusiveShared"
-		]
-
-[SobolQRNG]
-args = [""]
-kernels = [
-			"sobolGPU_kernel"
-		]
-
-[sortingNetworks]
-args = [""]
-kernels = [
-			"bitonicMergeGlobal"
-		]
-
-[transpose]
-args = ["-dimX=8192 -dimY=8192"]
-kernels = [
-			"transposeCoalesced"
-		]
-
-[mergeSort]
-args = [""]
-kernels = [
-			"mergeElementaryIntervalsKernel"
-		]
-
-[vectorAdd]
-args = ["-n=1048576"]
-kernels = [
-			"vectorAdd"
-		]
+# 
+# [conjugateGradient]
+# args = [""]
+# kernels = [
+# 			"csrMv_kernel"
+# 		]
+# 
+# [convolutionSeparable]
+# args = [""]
+# kernels = [
+# 			"convolutionRowsKernel"
+# 		]
+# 
+# [convolutionTexture]
+# args = [""]
+# kernels = [
+# 			"convolutionRowsKernel"
+# 		]
+# 
+# [fastWalshTransform]
+# args = [""]
+# kernels = [
+# 			"fwtBatch1Kernel"
+# 		]
+# 
+# [histogram]
+# args = [""]
+# kernels = [
+# 			"histogram256Kernel"
+# 		]
+# 
+# [hotspot]
+# args = ["512 1 ./datasets/hotspot/temp_512 ./datasets/hotspot/power_512 output.out"]
+# kernels = [
+# 			"calculate_temp"
+# 		]
+# 
+# [matrixMul(Global)]
+# args = ["-wA=1024 -hA=1024 -wB=1024 -hB=1024"]
+# kernels = [
+# 			"matrixMulCUDA"
+# 		]
+# 
+# [matrixMul]
+# args = ["-wA=1024 -hA=1024 -wB=1024 -hB=1024"]
+# kernels = [
+# 			"matrixMulCUDA"
+# 		]
+# 
+# [nn]
+# args = ["./datasets/nn/filelist_4 -r 5 -lat 30 -lng 90"]
+# kernels = [
+# 			"euclid"
+# 		]
+# 
+# [quasirandomGenerator]
+# args = [""]
+# kernels = [
+# 			"quasirandomGeneratorKernel"
+# 		]
+# 
+# [reduction]
+# args = ["-type=float --kernel=2"]
+# kernels = [
+# 			"reduce2"
+# 		]
+# 
+# [scalarProd]
+# args = [""]
+# kernels = [
+# 			"scalarProdGPU"
+# 		]
+# 
+# [scan]
+# args = [""]
+# kernels = [
+# 			"scanExclusiveShared"
+# 		]
+# 
+# [SobolQRNG]
+# args = [""]
+# kernels = [
+# 			"sobolGPU_kernel"
+# 		]
+# 
+# [sortingNetworks]
+# args = [""]
+# kernels = [
+# 			"bitonicMergeGlobal"
+# 		]
+# 
+# [transpose]
+# args = ["-dimX=8192 -dimY=8192"]
+# kernels = [
+# 			"transposeCoalesced"
+# 		]
+# 
+# [mergeSort]
+# args = [""]
+# kernels = [
+# 			"mergeElementaryIntervalsKernel"
+# 		]
+# 
+# [vectorAdd]
+# args = ["-n=1048576"]
+# kernels = [
+# 			"vectorAdd"
+# 		]
