fix dvfs for linux.

--- a/configs/benchmark_settings.cfg
+++ b/configs/benchmark_settings.cfg
@@ -1,9 +1,9 @@
 [profile_control]
 iters = 100
-secs = 3
+secs = 30
 cuda_device_id = 0
 nvIns_device_id = 0
-rest_time = 2
+rest_time = 5
 power_sample_interval = 50
 metrics = [
 			"achieved_occupancy",
@@ -41,7 +41,9 @@ metrics = [
 
 
 [dvfs_control]
-coreF = [1328]
+# coreF = [607, 708, 810, 911, 1012, 1101, 1202, 1303, 1328]
+# coreF = [607, 810, 1012, 1202, 1328]
+coreF = [1012, 1202, 1328]
 memF = [715]
 powerState = 5
 powerLim = [50, 70, 90, 110]
