--- a/configs/kernels_settings.cfg
+++ b/configs/kernels_settings.cfg
@@ -1,21 +1,21 @@
-# [backprop]
-# args = ["65536"]
-# kernels = [
-# 			"bpnn_layerforward_CUDA"
-# 		]
-# 
-# [bfs]
-# args = ["./datasets/bfs/graph1MW_6.txt"]
-# kernels = [
-# 			"bfs"
-# 		]
-# 
-# [binomialOptions]
-# args = [""]
-# kernels = [
-# 			"binomialOptionsKernel"
-# 		]
-# 
+[backprop]
+args = ["65536"]
+kernels = [
+			"bpnn_layerforward_CUDA"
+		]
+
+[bfs]
+args = ["./datasets/bfs/graph1MW_6.txt"]
+kernels = [
+			"bfs"
+		]
+
+[binomialOptions]
+args = [""]
+kernels = [
+			"binomialOptionsKernel"
+		]
+
 [BlackScholes]
 args = [""]
 kernels = [
@@ -34,11 +34,11 @@ kernels = [
 			"convolutionRowsKernel"
 		]
 
-# [convolutionTexture]
-# args = [""]
-# kernels = [
-# 			"convolutionRowsKernel"
-# 		]
+[convolutionTexture]
+args = [""]
+kernels = [
+			"convolutionRowsKernel"
+		]
 
 [fastWalshTransform]
 args = [""]
@@ -52,29 +52,29 @@ kernels = [
 			"histogram256Kernel"
 		]
 
-# [hotspot]
-# args = ["512 1 ./datasets/hotspot/temp_512 ./datasets/hotspot/power_512 output.out"]
-# kernels = [
-# 			"calculate_temp"
-# 		]
-# 
-[matrixMul_global]
+[hotspot]
+args = ["512 1 ./datasets/hotspot/temp_512 ./datasets/hotspot/power_512 output.out"]
+kernels = [
+			"calculate_temp"
+		]
+
+[matrixMulGlobal]
 args = ["-wA=1024 -hA=1024 -wB=1024 -hB=1024"]
 kernels = [
 			"matrixMulCUDA"
 		]
 
-[matrixMul_shared]
+[matrixMulShared]
 args = ["-wA=1024 -hA=1024 -wB=1024 -hB=1024"]
 kernels = [
 			"matrixMulCUDA"
 		]
 
-# [nn]
-# args = ["./datasets/nn/filelist_4 -r 5 -lat 30 -lng 90"]
-# kernels = [
-# 			"euclid"
-# 		]
+[nn]
+args = ["./datasets/nn/filelist_4 -r 5 -lat 30 -lng 90"]
+kernels = [
+			"euclid"
+		]
  
 [quasirandomGenerator]
 args = [""]
