add csv generators.

--- a/configs/kernels_settings.cfg
+++ b/configs/kernels_settings.cfg
@@ -70,6 +70,18 @@ kernels = [
 			"matrixMulCUDA"
 		]
 
+[matrixMul(Global)]
+args = ["-wA=1024 -hA=1024 -wB=1024 -hB=1024"]
+kernels = [
+			"matrixMulCUDA"
+		]
+
+[matrixMul]
+args = ["-wA=1024 -hA=1024 -wB=1024 -hB=1024"]
+kernels = [
+			"matrixMulCUDA"
+		]
+
 [nn]
 args = ["./datasets/nn/filelist_4 -r 5 -lat 30 -lng 90"]
 kernels = [
