--- a/configs/kernels_settings.cfg
+++ b/configs/kernels_settings.cfg
@@ -1,13 +1,13 @@
-[backprop]
+[backprop_backward]
 args = ["65536"]
 kernels = [
-			"bpnn_layerforward_CUDA"
+			"bpnn_adjust_weights_cuda"
 		]
 
-[bfs]
+[backprop_forward]
 args = ["./datasets/bfs/graph1MW_6.txt"]
 kernels = [
-			"bfs"
+			"bpnn_layerforward_CUDA"
 		]
 
 [binomialOptions]
@@ -20,6 +20,12 @@ kernels = [
 args = [""]
 kernels = [
 			"BlackScholesGPU"
+		]
+
+[cfd]
+args = [""]
+kernels = [
+			"cuda_compute_flux"
 		]
 
 [conjugateGradient]
@@ -40,10 +46,28 @@ kernels = [
 			"convolutionRowsKernel"
 		]
 
+[dxtc]
+args = [""]
+kernels = [
+			"compress"
+		]
+
+[eigenvalues]
+args = [""]
+kernels = [
+			"bisectKernel"
+		]
+
 [fastWalshTransform]
 args = [""]
 kernels = [
-			"fwtBatch1Kernel"
+			"fwtBatch2Kernel"
+		]
+
+[gaussian]
+args = [""]
+kernels = [
+			"fan2"
 		]
 
 [histogram]
@@ -70,16 +94,10 @@ kernels = [
 			"matrixMulCUDA"
 		]
 
-[matrixMul(Global)]
-args = ["-wA=1024 -hA=1024 -wB=1024 -hB=1024"]
+[mergeSort]
+args = ["./datasets/nn/filelist_4 -r 5 -lat 30 -lng 90"]
 kernels = [
-			"matrixMulCUDA"
-		]
-
-[matrixMul]
-args = ["-wA=1024 -hA=1024 -wB=1024 -hB=1024"]
-kernels = [
-			"matrixMulCUDA"
+			"mergeSortSharedKernel"
 		]
 
 [nn]
@@ -106,10 +124,16 @@ kernels = [
 			"scalarProdGPU"
 		]
 
-[scan]
+[scan_scanExclusiveShared]
 args = [""]
 kernels = [
 			"scanExclusiveShared"
+		]
+
+[scan_uniformUpdate]
+args = [""]
+kernels = [
+			"uniformUpdate"
 		]
 
 [SobolQRNG]
@@ -121,7 +145,7 @@ kernels = [
 [sortingNetworks]
 args = [""]
 kernels = [
-			"bitonicMergeGlobal"
+			"bitonicSortShared1"
 		]
 
 [transpose]
@@ -130,14 +154,26 @@ kernels = [
 			"transposeCoalesced"
 		]
 
-[mergeSort]
-args = [""]
-kernels = [
-			"mergeElementaryIntervalsKernel"
-		]
-
 [vectorAdd]
 args = ["-n=1048576"]
 kernels = [
 			"vectorAdd"
+		]
+
+[srad]
+args = ["-n=1048576"]
+kernels = [
+			"srad_cuda_1"
+		]
+
+[stereoDisparity]
+args = ["-n=1048576"]
+kernels = [
+			"stereoDisparityKernel"
+		]
+
+[pathfinder]
+args = ["-n=1048576"]
+kernels = [
+			"dynproc_kernel"
 		]
