fix argument counter bugs.

--- a/configs/kernels/test.cfg
+++ b/configs/kernels/test.cfg
@@ -1,83 +1,83 @@
-[backprop_backward]
-args = ["65536"]
+[backpropBackward]
+args = ["524288"]
 kernels = [
 			"bpnn_adjust_weights_cuda"
 		]
 
-[backprop_forward]
-args = ["./datasets/bfs/graph1MW_6.txt"]
+[backpropForward]
+args = ["524288"]
 kernels = [
 			"bpnn_layerforward_CUDA"
 		]
 
 [binomialOptions]
-args = [""]
+args = ["-optN=28"]
 kernels = [
 			"binomialOptionsKernel"
 		]
 
 [BlackScholes]
-args = [""]
+args = ["-optN=28672000"]
 kernels = [
 			"BlackScholesGPU"
 		]
 
 [cfd]
-args = [""]
+args = ["./datasets/cfd/fvcorr.domn.193K"]
 kernels = [
 			"cuda_compute_flux"
 		]
 
 [conjugateGradient]
-args = [""]
+args = ["-N=4194304"]
 kernels = [
 			"csrMv_kernel"
 		]
 
 [convolutionSeparable]
-args = [""]
+args = ["-W=6144 -H=6144"]
 kernels = [
 			"convolutionRowsKernel"
 		]
 
 [convolutionTexture]
-args = [""]
+args = ["-W=6144 -H=6144"]
 kernels = [
 			"convolutionRowsKernel"
 		]
 
 [dxtc]
-args = [""]
+args = ["./datasets/dxtc/lena_std.ppm"]
 kernels = [
 			"compress"
 		]
 
 [eigenvalues]
-args = [""]
+args = ["-matrix-size=256"]
 kernels = [
 			"bisectKernel"
 		]
 
 [fastWalshTransform]
-args = [""]
+args = ["-log2D=26 -log2K=7"]
 kernels = [
 			"fwtBatch2Kernel"
 		]
 
 [gaussian]
-args = [""]
+args = ["-size=4096"]
 kernels = [
 			"fan2"
 		]
 
 [histogram]
-args = [""]
+args = ["-bytes=2097152"]
 kernels = [
 			"histogram256Kernel"
 		]
 
 [hotspot]
-args = ["512 1 ./datasets/hotspot/temp_512 ./datasets/hotspot/power_512 output.out"]
+args = ["512 2 ./datasets/hotspot/temp_512 ./datasets/hotspot/power_512 output.out"]
 kernels = [
 			"calculate_temp"
 		]
@@ -95,55 +95,55 @@ kernels = [
 		]
 
 [mergeSort]
-args = ["./datasets/nn/filelist_4 -r 5 -lat 30 -lng 90"]
+args = ["-N=2097152"]
 kernels = [
 			"mergeSortSharedKernel"
 		]
 
 [nn]
-args = ["./datasets/nn/filelist_4 -r 5 -lat 30 -lng 90"]
+args = ["./datasets/nn/list16384k.txt -r 5 -lat 30 -lng 90"]
 kernels = [
 			"euclid"
 		]
  
 [quasirandomGenerator]
-args = [""]
+args = ["-N=16"]
 kernels = [
 			"quasirandomGeneratorKernel"
 		]
 
 [reduction]
-args = ["-type=float --kernel=2"]
+args = ["-type=float --kernel=2 -N=32"]
 kernels = [
 			"reduce2"
 		]
 
 [scalarProd]
-args = [""]
+args = ["-N=32"]
 kernels = [
 			"scalarProdGPU"
 		]
 
-[scan_scanExclusiveShared]
-args = [""]
+[scanScanExclusiveShared]
+args = ["-N=32"]
 kernels = [
 			"scanExclusiveShared"
 		]
 
-[scan_uniformUpdate]
-args = [""]
+[scanUniformUpdate]
+args = ["-N=32"]
 kernels = [
 			"uniformUpdate"
 		]
 
 [SobolQRNG]
-args = [""]
+args = ["-N=64"]
 kernels = [
 			"sobolGPU_kernel"
 		]
 
 [sortingNetworks]
-args = [""]
+args = ["-N=4"]
 kernels = [
 			"bitonicSortShared1"
 		]
@@ -155,25 +155,25 @@ kernels = [
 		]
 
 [vectorAdd]
-args = ["-n=1048576"]
+args = ["-n=32"]
 kernels = [
 			"vectorAdd"
 		]
 
 [srad]
-args = ["-n=1048576"]
+args = ["2048 4096  0 127 0 127 0.5 1"]
 kernels = [
 			"srad_cuda_1"
 		]
 
 [stereoDisparity]
-args = ["-n=1048576"]
+args = ["./datasets/stereoDisparity/stereo.im0.2048x2048.ppm ./datasets/stereoDisparity/stereo.im1.2048x2048.ppm"]
 kernels = [
 			"stereoDisparityKernel"
 		]
 
 [pathfinder]
-args = ["-n=1048576"]
+args = ["256000 400 100"]
 kernels = [
 			"dynproc_kernel"
 		]
