add 30 test of kernels.

--- a/configs/kernels/perf_model.cfg
+++ b/configs/kernels/perf_model.cfg
@@ -128,7 +128,7 @@ args = [
 		"-size=8192"
 		]
 kernels = [
-			"fan2"
+			"Fan2"
 		]
 
 [histogram]
@@ -182,7 +182,7 @@ args = [
 		"-N=524288",
 		"-N=1048576",
 		"-N=2097152",
-		"-N=4194304",
+		"-N=4194304"
 		]
 kernels = [
 			"mergeSortSharedKernel"
@@ -215,7 +215,7 @@ args = [
 		"-type=float --kernel=2 -N=8",
 		"-type=float --kernel=2 -N=16",
 		"-type=float --kernel=2 -N=32",
-		"-type=float --kernel=2 -N=64",
+		"-type=float --kernel=2 -N=64"
 		]
 kernels = [
 			"reduce2"
@@ -280,8 +280,7 @@ kernels = [
 args = [
 		"-dimX=256 -dimY=256",
 		"-dimX=2048 -dimY=2048",
-		"-dimX=8192 -dimY=8192",
-		"-dimX=16384 -dimY=16384"
+		"-dimX=8192 -dimY=8192"
 		]
 kernels = [
 			"transposeCoalesced"
