--- a/configs/kernels/perf_model.cfg
+++ b/configs/kernels/perf_model.cfg
@@ -146,10 +146,7 @@ kernels = [
 args = [
 		"512 1 ./datasets/hotspot/temp_512 ./datasets/hotspot/power_512 output.out",
 		"512 2 ./datasets/hotspot/temp_512 ./datasets/hotspot/power_512 output.out",
-		"512 4 ./datasets/hotspot/temp_512 ./datasets/hotspot/power_512 output.out",
-		"512 1 ./datasets/hotspot/temp_1024 ./datasets/hotspot/power_1024 output.out",
-		"512 2 ./datasets/hotspot/temp_1024 ./datasets/hotspot/power_1024 output.out",
-		"512 4 ./datasets/hotspot/temp_1024 ./datasets/hotspot/power_1024 output.out"
+		"512 4 ./datasets/hotspot/temp_512 ./datasets/hotspot/power_512 output.out"
 		]
 kernels = [
 			"calculate_temp"
@@ -279,6 +276,7 @@ kernels = [
 [transpose]
 args = [
 		"-dimX=256 -dimY=256",
+		"-dimX=1024 -dimY=1024",
 		"-dimX=2048 -dimY=2048",
 		"-dimX=8192 -dimY=8192"
 		]
