--- a/configs/benchmarks/titanx-test.cfg
+++ b/configs/benchmarks/titanx-test.cfg
@@ -1,15 +1,24 @@
 [profile_control]
 iters = 10
-secs = 2
+secs = 30
 cuda_device_id = 1
 nvIns_device_id = 1
-rest_time = 1
+rest_time = 3
 power_sample_interval = 50
 metrics = [
 			"achieved_occupancy",
 			"sm_efficiency",
 			"warp_execution_efficiency",	
 			"eligible_warps_per_cycle",
+			"branch_efficiency",
+			"cf_executed",
+			"gld_throughput",
+			"gld_transactions",
+			"gld_transactions_per_request",
+			"gst_throughput",
+			"gst_transactions",
+			"gst_transactions_per_request",
+			"global_hit_rate",
 			"dram_read_transactions",
 			"dram_read_throughput",
 			"dram_write_transactions",
@@ -20,21 +29,23 @@ metrics = [
 			"l2_write_throughput",
 			"shared_load_transactions",
 			"shared_load_throughput",
+			"shared_load_transactions_per_request",
 			"shared_store_transactions",
 			"shared_store_throughput",
+			"shared_store_transactions_per_request",
+			"l2_tex_read_throughput",
+			"l2_tex_read_transactions",
+			"l2_tex_write_throughput",
+			"l2_tex_write_throughput",
 			"tex_cache_hit_rate",
 			"tex_cache_throughput",
 			"tex_cache_transactions",
-			"branch_efficiency",
-			"cf_executed",
-			"cf_issued",
+			"flop_count_dp",
+			"flop_count_dp_fma",
 			"flop_count_sp",
-			"flop_sp_efficiency",
-			"gld_throughput",
-			"gld_transactions",
-			"gst_throughput",
-			"gst_transactions",
-			"inst_issued",
+			"flop_count_sp_fma",
+			"flop_count_sp_special",
+			"inst_executed",
 			"inst_per_warp",
 			"ipc"
 		]
