--- a/configs/kernels/synthetic.cfg
+++ b/configs/kernels/synthetic.cfg
@@ -48,19 +48,19 @@ kernels = [
 			"benchmark_func"
 		]
 
-# [shmembench]
-# args = [
-# 		"-ratio=1  -type=1",
-# 		"-ratio=2  -type=1",
-# 		"-ratio=4  -type=1",
-# 		"-ratio=8  -type=1",
-# 		"-ratio=16 -type=1",
-# 		"-ratio=32 -type=1",
-# 		"-ratio=64 -type=1"
-# 		]
-# kernels = [
-# 			"benchmark_shmem"
-# 		]
+[shmembench]
+args = [
+		"-ratio=1  -type=1",
+		"-ratio=2  -type=1",
+		"-ratio=4  -type=1",
+		"-ratio=8  -type=1",
+		"-ratio=16 -type=1",
+		"-ratio=32 -type=1",
+		"-ratio=64 -type=1"
+		]
+kernels = [
+			"benchmark_shmem"
+		]
 
 [cachebench]
 args = [
