--- a/configs/kernels/synthetic.cfg
+++ b/configs/kernels/synthetic.cfg
@@ -3,20 +3,38 @@ args = [
 		"-ratio=1  -type=int",
 		"-ratio=2  -type=int",
 		"-ratio=4  -type=int",
-		"-ratio=8  -type=int",
+        "-ratio=8  -type=int",
+		"-ratio=10 -type=int",
+		"-ratio=12 -type=int",
+		"-ratio=14 -type=int",
 		"-ratio=16 -type=int",
+		"-ratio=20 -type=int",
+		"-ratio=24 -type=int",
+		"-ratio=28 -type=int",
 		"-ratio=32 -type=int",
 		"-ratio=1  -type=float",
 		"-ratio=2  -type=float",
 		"-ratio=4  -type=float",
-		"-ratio=8  -type=float",
+        "-ratio=8  -type=float",
+		"-ratio=10 -type=float",
+		"-ratio=12 -type=float",
+		"-ratio=14 -type=float",
 		"-ratio=16 -type=float",
+		"-ratio=20 -type=float",
+		"-ratio=24 -type=float",
+		"-ratio=28 -type=float",
 		"-ratio=32 -type=float",
 		"-ratio=1  -type=double",
 		"-ratio=2  -type=double",
 		"-ratio=4  -type=double",
-		"-ratio=8  -type=double",
+        "-ratio=8  -type=double",
+		"-ratio=10 -type=double",
+		"-ratio=12 -type=double",
+		"-ratio=14 -type=double",
 		"-ratio=16 -type=double",
+		"-ratio=20 -type=double",
+		"-ratio=24 -type=double",
+		"-ratio=28 -type=double",
 		"-ratio=32 -type=double"
 		]
 kernels = [
@@ -28,20 +46,38 @@ args = [
 		"-ratio=1  -type=int",
 		"-ratio=2  -type=int",
 		"-ratio=4  -type=int",
-		"-ratio=8  -type=int",
+        "-ratio=8  -type=int",
+		"-ratio=10 -type=int",
+		"-ratio=12 -type=int",
+		"-ratio=14 -type=int",
 		"-ratio=16 -type=int",
+		"-ratio=20 -type=int",
+		"-ratio=24 -type=int",
+		"-ratio=28 -type=int",
 		"-ratio=32 -type=int",
 		"-ratio=1  -type=float",
 		"-ratio=2  -type=float",
 		"-ratio=4  -type=float",
-		"-ratio=8  -type=float",
+        "-ratio=8  -type=float",
+		"-ratio=10 -type=float",
+		"-ratio=12 -type=float",
+		"-ratio=14 -type=float",
 		"-ratio=16 -type=float",
+		"-ratio=20 -type=float",
+		"-ratio=24 -type=float",
+		"-ratio=28 -type=float",
 		"-ratio=32 -type=float",
 		"-ratio=1  -type=double",
 		"-ratio=2  -type=double",
 		"-ratio=4  -type=double",
-		"-ratio=8  -type=double",
+        "-ratio=8  -type=double",
+		"-ratio=10 -type=double",
+		"-ratio=12 -type=double",
+		"-ratio=14 -type=double",
 		"-ratio=16 -type=double",
+		"-ratio=20 -type=double",
+		"-ratio=24 -type=double",
+		"-ratio=28 -type=double",
 		"-ratio=32 -type=double"
 		]
 kernels = [
@@ -50,13 +86,39 @@ kernels = [
 
 [shmembench]
 args = [
+		"-ratio=1  -type=0",
+		"-ratio=2  -type=0",
+		"-ratio=4  -type=0",
+		"-ratio=8  -type=0",
+		"-ratio=12 -type=0",
+		"-ratio=16 -type=0",
+		"-ratio=20 -type=0",
+		"-ratio=24 -type=0",
+		"-ratio=28 -type=0",
+		"-ratio=32 -type=0",
+		"-ratio=64 -type=0",
 		"-ratio=1  -type=1",
 		"-ratio=2  -type=1",
 		"-ratio=4  -type=1",
 		"-ratio=8  -type=1",
+		"-ratio=12 -type=1",
 		"-ratio=16 -type=1",
+		"-ratio=20 -type=1",
+		"-ratio=24 -type=1",
+		"-ratio=28 -type=1",
 		"-ratio=32 -type=1",
-		"-ratio=64 -type=1"
+		"-ratio=64 -type=1",
+		"-ratio=1  -type=2",
+		"-ratio=2  -type=2",
+		"-ratio=4  -type=2",
+		"-ratio=8  -type=2",
+		"-ratio=12 -type=2",
+		"-ratio=16 -type=2",
+		"-ratio=20 -type=2",
+		"-ratio=24 -type=2",
+		"-ratio=28 -type=2",
+		"-ratio=32 -type=2",
+		"-ratio=64 -type=2"
 		]
 kernels = [
 			"benchmark_shmem"
@@ -64,24 +126,36 @@ kernels = [
 
 [cachebench]
 args = [
+		"-type=0 -idxClamp=0 -step=1",
+		"-type=0 -idxClamp=0 -step=2",
+		"-type=0 -idxClamp=0 -step=3",
+		"-type=0 -idxClamp=0 -step=4",
+		"-type=0 -idxClamp=0 -step=5",
+		"-type=0 -idxClamp=0 -step=6",
+		"-type=0 -idxClamp=0 -step=7",
+		"-type=0 -idxClamp=0 -step=8",
+		"-type=0 -idxClamp=0 -step=9",
+		"-type=0 -idxClamp=0 -step=10",
+		"-type=0 -idxClamp=0 -step=11",
+		"-type=0 -idxClamp=0 -step=12",
+		"-type=0 -idxClamp=0 -step=13",
+		"-type=0 -idxClamp=0 -step=14",
+		"-type=0 -idxClamp=0 -step=15",
+		"-type=0 -idxClamp=0 -step=16",
+		"-type=0 -idxClamp=0 -step=32",
 		"-type=1 -idxClamp=0 -step=1",
 		"-type=1 -idxClamp=0 -step=2",
+		"-type=1 -idxClamp=0 -step=3",
 		"-type=1 -idxClamp=0 -step=4",
+		"-type=1 -idxClamp=0 -step=5",
+		"-type=1 -idxClamp=0 -step=6",
+		"-type=1 -idxClamp=0 -step=7",
 		"-type=1 -idxClamp=0 -step=8",
 		"-type=1 -idxClamp=0 -step=16",
-		"-type=1 -idxClamp=0 -step=32",
-		"-type=1 -idxClamp=1024 -step=1",
-		"-type=1 -idxClamp=1024 -step=2",
-		"-type=1 -idxClamp=1024 -step=4",
-		"-type=1 -idxClamp=1024 -step=8",
-		"-type=1 -idxClamp=1024 -step=16",
-		"-type=1 -idxClamp=1024 -step=32",
-		"-type=1 -idxClamp=4096 -step=1",
-		"-type=1 -idxClamp=4096 -step=2",
-		"-type=1 -idxClamp=4096 -step=4",
-		"-type=1 -idxClamp=4096 -step=8",
-		"-type=1 -idxClamp=4096 -step=16",
-		"-type=1 -idxClamp=4096 -step=32"
+		"-type=2 -idxClamp=0 -step=1",
+		"-type=2 -idxClamp=0 -step=2",
+		"-type=2 -idxClamp=0 -step=4",
+		"-type=2 -idxClamp=0 -step=8"
 		]
 kernels = [
 			"benchmark_func"
@@ -89,24 +163,36 @@ kernels = [
 
 [cachebench-l2-only]
 args = [
+		"-type=0 -idxClamp=0 -step=1",
+		"-type=0 -idxClamp=0 -step=2",
+		"-type=0 -idxClamp=0 -step=3",
+		"-type=0 -idxClamp=0 -step=4",
+		"-type=0 -idxClamp=0 -step=5",
+		"-type=0 -idxClamp=0 -step=6",
+		"-type=0 -idxClamp=0 -step=7",
+		"-type=0 -idxClamp=0 -step=8",
+		"-type=0 -idxClamp=0 -step=9",
+		"-type=0 -idxClamp=0 -step=10",
+		"-type=0 -idxClamp=0 -step=11",
+		"-type=0 -idxClamp=0 -step=12",
+		"-type=0 -idxClamp=0 -step=13",
+		"-type=0 -idxClamp=0 -step=14",
+		"-type=0 -idxClamp=0 -step=15",
+		"-type=0 -idxClamp=0 -step=16",
+		"-type=0 -idxClamp=0 -step=32",
 		"-type=1 -idxClamp=0 -step=1",
 		"-type=1 -idxClamp=0 -step=2",
+		"-type=1 -idxClamp=0 -step=3",
 		"-type=1 -idxClamp=0 -step=4",
+		"-type=1 -idxClamp=0 -step=5",
+		"-type=1 -idxClamp=0 -step=6",
+		"-type=1 -idxClamp=0 -step=7",
 		"-type=1 -idxClamp=0 -step=8",
 		"-type=1 -idxClamp=0 -step=16",
-		"-type=1 -idxClamp=0 -step=32",
-		"-type=1 -idxClamp=1024 -step=1",
-		"-type=1 -idxClamp=1024 -step=2",
-		"-type=1 -idxClamp=1024 -step=4",
-		"-type=1 -idxClamp=1024 -step=8",
-		"-type=1 -idxClamp=1024 -step=16",
-		"-type=1 -idxClamp=1024 -step=32",
-		"-type=1 -idxClamp=4096 -step=1",
-		"-type=1 -idxClamp=4096 -step=2",
-		"-type=1 -idxClamp=4096 -step=4",
-		"-type=1 -idxClamp=4096 -step=8",
-		"-type=1 -idxClamp=4096 -step=16",
-		"-type=1 -idxClamp=4096 -step=32"
+		"-type=2 -idxClamp=0 -step=1",
+		"-type=2 -idxClamp=0 -step=2",
+		"-type=2 -idxClamp=0 -step=4",
+		"-type=2 -idxClamp=0 -step=8"
 		]
 kernels = [
 			"benchmark_func"
@@ -114,25 +200,65 @@ kernels = [
 
 [cachebench-tex-loads]
 args = [
+		"-type=0 -idxClamp=0 -step=1",
+		"-type=0 -idxClamp=0 -step=2",
+		"-type=0 -idxClamp=0 -step=3",
+		"-type=0 -idxClamp=0 -step=4",
+		"-type=0 -idxClamp=0 -step=5",
+		"-type=0 -idxClamp=0 -step=6",
+		"-type=0 -idxClamp=0 -step=7",
+		"-type=0 -idxClamp=0 -step=8",
+		"-type=0 -idxClamp=0 -step=9",
+		"-type=0 -idxClamp=0 -step=10",
+		"-type=0 -idxClamp=0 -step=11",
+		"-type=0 -idxClamp=0 -step=12",
+		"-type=0 -idxClamp=0 -step=13",
+		"-type=0 -idxClamp=0 -step=14",
+		"-type=0 -idxClamp=0 -step=15",
+		"-type=0 -idxClamp=0 -step=16",
+		"-type=0 -idxClamp=0 -step=32",
 		"-type=1 -idxClamp=0 -step=1",
 		"-type=1 -idxClamp=0 -step=2",
+		"-type=1 -idxClamp=0 -step=3",
 		"-type=1 -idxClamp=0 -step=4",
+		"-type=1 -idxClamp=0 -step=5",
+		"-type=1 -idxClamp=0 -step=6",
+		"-type=1 -idxClamp=0 -step=7",
 		"-type=1 -idxClamp=0 -step=8",
 		"-type=1 -idxClamp=0 -step=16",
-		"-type=1 -idxClamp=0 -step=32",
-		"-type=1 -idxClamp=1024 -step=1",
-		"-type=1 -idxClamp=1024 -step=2",
-		"-type=1 -idxClamp=1024 -step=4",
-		"-type=1 -idxClamp=1024 -step=8",
-		"-type=1 -idxClamp=1024 -step=16",
-		"-type=1 -idxClamp=1024 -step=32",
-		"-type=1 -idxClamp=4096 -step=1",
-		"-type=1 -idxClamp=4096 -step=2",
-		"-type=1 -idxClamp=4096 -step=4",
-		"-type=1 -idxClamp=4096 -step=8",
-		"-type=1 -idxClamp=4096 -step=16",
-		"-type=1 -idxClamp=4096 -step=32"
+		"-type=2 -idxClamp=0 -step=1",
+		"-type=2 -idxClamp=0 -step=2",
+		"-type=2 -idxClamp=0 -step=4",
+		"-type=2 -idxClamp=0 -step=8"
 		]
 kernels = [
 			"benchmark_func"
 		]
+
+# [GCRSMeasurePeakThroughput]
+# args = [
+#         "4 1 4",
+#         "4 1 5",
+#         "4 1 6",
+#         "4 1 7",
+#         "4 1 8",
+#         "4 2 4",
+#         "4 2 5",
+#         "4 2 6",
+#         "4 2 7",
+#         "4 2 8",
+#         "4 3 4",
+#         "4 3 5",
+#         "4 3 6",
+#         "4 3 7",
+#         "4 3 8",
+#         "4 4 4",
+#         "4 4 5",
+#         "4 4 6",
+#         "4 4 7",
+#         "4 4 8"
+#         ]
+# kernels = [
+#            "coding_dotprod"
+#         ]
+# 
