--- a/configs/kernels/real.cfg
+++ b/configs/kernels/real.cfg
@@ -136,7 +136,7 @@ kernels = [
 
 [nn]
 args = [
-		"./datasets/nn/list8192k.txt -r 5 -lat 30 -lng 90",
+		"./datasets/nn/list8192k.txt -r 5 -lat 30 -lng 90"
 		]
 kernels = [
 			"euclid"
