ignore figures, add power extracter.

--- a/configs/benchmarks/gtx980-high-dvfs.cfg
+++ b/configs/benchmarks/gtx980-high-dvfs.cfg
@@ -55,12 +55,11 @@ metrics = [
 
 
 [dvfs_control]
-#coreF = [700, 900, 1100, 1300, 1500]
-#memF = [2100, 2600, 3100, 3600, 3900]
-#powerState = 2
-coreF = [500, 600, 700, 800, 900, 1000]
-memF = [500, 600, 700, 800, 900, 1000]
-powerState = 5
+coreBase = 0
+memBase = 0
+coreF = [700, 900, 1100, 1300, 1500]
+memF = [2100, 2600, 3100, 3600, 3900]
+powerState = 2
 powerLim = [50, 70, 90, 110]
 
 
