--- a/configs/benchmarks/gtx980-low-dvfs.cfg
+++ b/configs/benchmarks/gtx980-low-dvfs.cfg
@@ -55,8 +55,9 @@ metrics = [
 
 
 [dvfs_control]
-#coreF = [500, 600, 700, 800, 900, 1000]
-coreF = [1000]
+coreBase = 0
+memBase = 0
+coreF = [500, 600, 700, 800, 900, 1000]
 memF = [500, 600, 700, 800, 900, 1000]
 powerState = 5
 powerLim = [50, 70, 90, 110]
