polish power extracter.

--- a/configs/benchmarks/gtx1080ti-dvfs.cfg
+++ b/configs/benchmarks/gtx1080ti-dvfs.cfg
@@ -55,6 +55,8 @@ metrics = [
 
 
 [dvfs_control]
+coreBase = 1800
+memBase = 5000
 coreF = [200, 100, 0, -100, -200]
 memF = [500, 0, -500, -1000]
 powerState = 0
