--- a/configs/benchmarks/p100-dvfs.cfg
+++ b/configs/benchmarks/p100-dvfs.cfg
@@ -54,8 +54,10 @@ metrics = [
 		]
 
 [dvfs_control]
+coreBase = 0
+memBase = 0
 coreF = [607, 810, 1012, 1202, 1328]
 memF = [715]
 powerState = 0
-# powerLim = [50, 70, 90, 110]
+powerLim = [50, 70, 90, 110]
 
