fix power extract bugs.

--- a/configs/benchmarks/gtx980-low-dvfs.cfg
+++ b/configs/benchmarks/gtx980-low-dvfs.cfg
@@ -60,6 +60,8 @@ memBase = 0
 coreF = [500, 600, 700, 800, 900, 1000]
 memF = [500, 600, 700, 800, 900, 1000]
 powerState = 5
+runState = 5
+dvfsEnv = "windows"
 powerLim = [50, 70, 90, 110]
 
 
