--- a/configs/benchmarks/p100-dvfs.cfg
+++ b/configs/benchmarks/p100-dvfs.cfg
@@ -59,5 +59,7 @@ memBase = 0
 coreF = [607, 810, 1012, 1202, 1328]
 memF = [715]
 powerState = 0
+runState = 0
+dvfsEnv = "linux"
 powerLim = [50, 70, 90, 110]
 
