--- a/configs/benchmarks/gtx1080ti-dvfs.cfg
+++ b/configs/benchmarks/gtx1080ti-dvfs.cfg
@@ -1,8 +1,8 @@
 [profile_control]
 iters = 10
-secs = 20
+secs = 30
 cuda_device_id = 0
-nvIns_device_id = 0
+nvIns_device_id = 1
 rest_time = 10
 power_sample_interval = 10
 metrics = [
@@ -60,6 +60,8 @@ memBase = 5000
 coreF = [200, 100, 0, -100, -200]
 memF = [500, 0, -500, -1000]
 powerState = 0
+runState = 2
+dvfsEnv = "windows"
 powerLim = [50, 70, 90, 110]
 
 
