updated with the manuscript.

--- a/configs/kernels/real-retry.cfg
+++ b/configs/kernels/real-retry.cfg
@@ -1,8 +1,16 @@
-[nn]
+[matrixMulGlobal]
 args = [
-		"./datasets/nn/list8192k.txt -r 5 -lat 30 -lng 90"
+		"-wA=2048 -hA=2048 -wB=2048 -hB=2048"
 		]
 kernels = [
-			"euclid"
+			"matrixMulCUDA"
 		]
- 
+
+[quasirandomGenerator]
+args = [
+		"-N=32"
+		]
+kernels = [
+			"quasirandomGeneratorKernel"
+		]
+
