--- a/configs/benchmarks/v100-dvfs.cfg
+++ b/configs/benchmarks/v100-dvfs.cfg
@@ -56,7 +56,7 @@ metrics = [
 [dvfs_control]
 coreBase = 0
 memBase = 0
-coreF = [510, 652, 802, 945, 1087, 1237, 1380]
+coreF = [802, 945, 1087, 1237, 1380]
 memF = [877]
 powerState = 0
 runState = 0
