--- a/src/linux/convolutionFFT2D/Makefile
+++ b/src/linux/convolutionFFT2D/Makefile
@@ -273,7 +273,7 @@ ALL_LDFLAGS += $(addprefix -Xlinker ,$(EXTRA_LDFLAGS))
 
 # Common includes and paths for CUDA
 INCLUDES  := -I../common/inc
-LIBRARIES :=
+LIBRARIES := -lcufft
 
 ################################################################################
 
@@ -308,7 +308,7 @@ endif
 # Target rules
 all: build
 
-build: matrixMul
+build: convolutionFFT2D
 
 check.deps:
 ifeq ($(SAMPLE_ENABLED),0)
@@ -317,19 +317,25 @@ else
 	@echo "Sample is ready - all dependencies have been met"
 endif
 
-matrixMul.o:matrixMul.cu
+convolutionFFT2D.o:convolutionFFT2D.cu
 	$(EXEC) $(NVCC) $(INCLUDES) $(ALL_CCFLAGS) $(GENCODE_FLAGS) -o $@ -c $<
 
-matrixMul: matrixMul.o
+convolutionFFT2D_gold.o:convolutionFFT2D_gold.cpp
+	$(EXEC) $(NVCC) $(INCLUDES) $(ALL_CCFLAGS) $(GENCODE_FLAGS) -o $@ -c $<
+
+main.o:main.cpp
+	$(EXEC) $(NVCC) $(INCLUDES) $(ALL_CCFLAGS) $(GENCODE_FLAGS) -o $@ -c $<
+
+convolutionFFT2D: convolutionFFT2D.o convolutionFFT2D_gold.o main.o
 	$(EXEC) $(NVCC) $(ALL_LDFLAGS) $(GENCODE_FLAGS) -o $@ $+ $(LIBRARIES)
 	$(EXEC) mkdir -p ../bin/
 	$(EXEC) mv $@ ../bin/
 
 run: build
-	$(EXEC) ./matrixMul
+	$(EXEC) ./convolutionFFT2D
 
 clean:
-	rm -f *.o
-	rm -rf ../bin/matrixMul
+	rm -f convolutionFFT2D *.o
+	rm -rf ../bin/convolutionFFT2D
 
 clobber: clean
