fix time info bugs of nvml_tools.

--- a/src/linux/Makefile
+++ b/src/linux/Makefile
@@ -34,7 +34,7 @@
 ###############################################################################
 
 
-CASES=matrixMul nnForward nvml_tools
+CASES=binomialOptions BlackScholes conjugateGradient convolutionFFT2D convolutionSeparable convolutionTexture eigenvalues fastWalshTransform gaussian histogram hotspot kmeans matrixMul mergeSort nnForward nvml_tools pathfinder quasirandomGenerator reduction scalarProd SobolQRNG sortingNetworks transpose vectorAdd
 
 TARGET_ARCH ?= $(shell uname -m)
 
