finish testing on V100.

--- a/configs/benchmarks/v100-dvfs.cfg
+++ b/configs/benchmarks/v100-dvfs.cfg
@@ -1,12 +1,15 @@
 [device]
 name=v100
+# CUDA API
 cuda_device_id=0
+# NvidiaInspector
 nvins_device_id=0
+# nvidia-smi
 nvsmi_device_id=0
 
 [global]
 # running time control to collect long-term info, e.g., power and dcgm
-secs=10
+secs=15
 # the interval between two benchmarks
 rest_time=2
 # power sampling interval, ms
@@ -70,9 +73,9 @@ metrics = []
 coreBase = 0
 memBase = 0
 coreF = [802, 945, 1087, 1237, 1380]
+# the frequency of V100 HBM is fixed
 memF = [877]
 powerState = 0
-runState = 0
-dvfsEnv = "linux"
-powerLim = [50, 70, 90, 110]
+# min:100, max:250
+powerLim = 250
 
