--- a/configs/benchmarks/v100-dvfs.cfg
+++ b/configs/benchmarks/v100-dvfs.cfg
@@ -9,9 +9,9 @@ nvsmi_device_id=0
 
 [global]
 # running time control to collect long-term info, e.g., power and dcgm
-secs=15
+secs=12
 # the interval between two benchmarks
-rest_time=2
+rest_time=4
 # power sampling interval, ms
 power_sample_interval=100
 
@@ -67,12 +67,13 @@ metrics = [
     "ipc"]
 
 [dcgm]
-metrics = []
+metrics = [1002, 1003, 1004, 1005, 1006, 1007, 1008]
 
 [dvfs_control]
 coreBase = 0
 memBase = 0
-coreF = [802, 945, 1087, 1237, 1380]
+# coreF = [405, 502, 600, 705, 802, 945, 1087, 1102, 1237, 1380]
+coreF = [705, 1102]
 # the frequency of V100 HBM is fixed
 memF = [877]
 powerState = 0
