--- a/configs/kernels/v1/real.cfg
+++ b/configs/kernels/v1/real.cfg
@@ -1,4 +1,12 @@
-[nnForward]
+[backpropBackward]
+args = [
+		"524288"
+	]
+kernels = [
+			"bpnn_adjust_weights_cuda"
+		]
+
+[backpropForward]
 args = [
 		"524288"
 	]
@@ -30,6 +38,14 @@ kernels = [
 			"cuda_compute_flux"
 		]
 
+[conjugateGradient]
+args = [
+		"-N=8388608"
+		]
+kernels = [
+			"csrMv_kernel"
+		]
+
 [convolutionSeparable]
 args = [
 		"-W=10240 -H=10240"
@@ -44,6 +60,14 @@ args = [
 		]
 kernels = [
 			"convolutionRowsKernel"
+		]
+
+[dxtc]
+args = [
+		"./datasets/dxtc/lena_std.ppm"
+		]
+kernels = [
+			"compress"
 		]
 
 [eigenvalues]
@@ -86,7 +110,15 @@ kernels = [
 			"calculate_temp"
 		]
 
-[matrixMul]
+[matrixMulGlobal]
+args = [
+		"-wA=2048 -hA=2048 -wB=2048 -hB=2048"
+		]
+kernels = [
+			"matrixMulCUDA"
+		]
+
+[matrixMulShared]
 args = [
 		"-wA=2048 -hA=2048 -wB=2048 -hB=2048"
 		]
@@ -102,6 +134,14 @@ kernels = [
 			"mergeSortSharedKernel"
 		]
 
+[nn]
+args = [
+		"./datasets/nn/list8192k.txt -r 5 -lat 30 -lng 90"
+		]
+kernels = [
+			"euclid"
+		]
+ 
 [quasirandomGenerator]
 args = [
 		"-N=32"
@@ -124,6 +164,22 @@ args = [
 		]
 kernels = [
 			"scalarProdGPU"
+		]
+
+[scanScanExclusiveShared]
+args = [
+		"-N=64"
+		]
+kernels = [
+			"scanExclusiveShared"
+		]
+
+[scanUniformUpdate]
+args = [
+		"-N=64"
+		]
+kernels = [
+			"uniformUpdate"
 		]
 
 [SobolQRNG]
@@ -156,5 +212,29 @@ args = [
 		]
 kernels = [
 			"vectorAdd"
+		]
+
+[srad]
+args = [
+		"8192 4096 1 127 0 127 0.5 1"
+		]
+kernels = [
+			"srad_cuda_1"
+		]
+
+[stereoDisparity]
+args = [
+		"./datasets/stereoDisparity/stereo.im0.2048x2048.ppm ./datasets/stereoDisparity/stereo.im1.2048x2048.ppm"
+		]
+kernels = [
+			"stereoDisparityKernel"
+		]
+
+[pathfinder]
+args = [
+		"512000 400 100"
+		]
+kernels = [
+			"dynproc_kernel"
 		]
 
