--- a/src/linux/mixbench-cuda-ro/Makefile
+++ b/src/linux/mixbench-cuda-ro/Makefile
@@ -5,7 +5,7 @@ include ../common.mk
 # Target rules
 all: build
 
-build: cachebench
+build: mixbench-cuda-ro
 
 check.deps:
 ifeq ($(SAMPLE_ENABLED),0)
@@ -14,22 +14,22 @@ else
 	@echo "Sample is ready - all dependencies have been met"
 endif
 
-cache_kernels.o:cache_kernels.cu
+mix_kernels_cuda_ro.o:mix_kernels_cuda_ro.cu
 	$(EXEC) $(NVCC) $(INCLUDES) $(ALL_CCFLAGS) $(GENCODE_FLAGS) -o $@ -c $<
 
-main.o:main.cpp
+main-cuda.o:main-cuda.cpp
 	$(EXEC) $(NVCC) $(INCLUDES) $(ALL_CCFLAGS) $(GENCODE_FLAGS) -o $@ -c $<
 
-cachebench:cache_kernels.o main.o
+mixbench-cuda-ro:mix_kernels_cuda_ro.o main-cuda.o
 	$(EXEC) $(NVCC) $(ALL_LDFLAGS) $(GENCODE_FLAGS) -o $@ $+ $(LIBRARIES)
 	$(EXEC) mkdir -p ../bin/
 	$(EXEC) mv $@ ../bin/
 
 run: build
-	$(EXEC) ./cachebench
+	$(EXEC) ./mixbench-cuda-ro
 
 clean:
 	rm -f *.o
-	rm -rf ../bin/cachebench
+	rm -rf ../bin/mixbench-cuda-ro
 
 clobber: clean
