--- a/src/linux/shmembench/Makefile
+++ b/src/linux/shmembench/Makefile
@@ -5,7 +5,7 @@ include ../common.mk
 # Target rules
 all: build
 
-build: cachebench
+build: shmembench
 
 check.deps:
 ifeq ($(SAMPLE_ENABLED),0)
@@ -14,22 +14,22 @@ else
 	@echo "Sample is ready - all dependencies have been met"
 endif
 
-cache_kernels.o:cache_kernels.cu
+shmem_kernels.o:shmem_kernels.cu
 	$(EXEC) $(NVCC) $(INCLUDES) $(ALL_CCFLAGS) $(GENCODE_FLAGS) -o $@ -c $<
 
 main.o:main.cpp
 	$(EXEC) $(NVCC) $(INCLUDES) $(ALL_CCFLAGS) $(GENCODE_FLAGS) -o $@ -c $<
 
-cachebench:cache_kernels.o main.o
+shmembench:shmem_kernels.o main.o
 	$(EXEC) $(NVCC) $(ALL_LDFLAGS) $(GENCODE_FLAGS) -o $@ $+ $(LIBRARIES)
 	$(EXEC) mkdir -p ../bin/
 	$(EXEC) mv $@ ../bin/
 
 run: build
-	$(EXEC) ./cachebench
+	$(EXEC) ./shmembench
 
 clean:
 	rm -f *.o
-	rm -rf ../bin/cachebench
+	rm -rf ../bin/shmembench
 
 clobber: clean
