run v100 for microbenchmark.

--- a/configs/benchmarks/v100-dvfs.cfg
+++ b/configs/benchmarks/v100-dvfs.cfg
@@ -72,8 +72,7 @@ metrics = [1002, 1003, 1004, 1005, 1006, 1007, 1008]
 [dvfs_control]
 coreBase = 0
 memBase = 0
-# coreF = [405, 502, 600, 705, 802, 945, 1087, 1102, 1237, 1380]
-coreF = [705, 1102]
+coreF = [405, 502, 600, 705, 802, 945, 1087, 1102, 1237, 1380]
 # the frequency of V100 HBM is fixed
 memF = [877]
 powerState = 0
