format one parsed record as dict.

--- a/configs/kernels/microbenchmark.cfg
+++ b/configs/kernels/microbenchmark.cfg
@@ -119,7 +119,7 @@ args = [
 		"-type=2 -idxClamp=0 -step=8",
 		"-type=2 -idxClamp=0 -step=12",
 		"-type=2 -idxClamp=0 -step=16",
-		"-type=2 -idxClamp=0 -step=32",
+		"-type=2 -idxClamp=0 -step=32"
 		]
 kernels = [
 			"benchmark_func"
@@ -144,7 +144,7 @@ args = [
 		"-type=2 -idxClamp=0 -step=4",
 		"-type=2 -idxClamp=0 -step=8",
 		"-type=2 -idxClamp=0 -step=16",
-		"-type=2 -idxClamp=0 -step=32",
+		"-type=2 -idxClamp=0 -step=32"
 		]
 kernels = [
 			"benchmark_func"
@@ -172,7 +172,7 @@ args = [
 		"-type=2 -idxClamp=0 -step=8",
 		"-type=2 -idxClamp=0 -step=12",
 		"-type=2 -idxClamp=0 -step=16",
-		"-type=2 -idxClamp=0 -step=32",
+		"-type=2 -idxClamp=0 -step=32"
 		]
 kernels = [
 			"benchmark_func"
