revise the compile options for cachebench-l2-only and cachebench-tex-load.

--- a/src/linux/cachebench-l2-only/Makefile
+++ b/src/linux/cachebench-l2-only/Makefile
@@ -15,7 +15,7 @@ else
 endif
 
 cache_kernels.o:cache_kernels.cu
-	$(EXEC) $(NVCC) $(INCLUDES) $(ALL_CCFLAGS) $(GENCODE_FLAGS) -o $@ -c $<
+	$(EXEC) $(NVCC) $(INCLUDES) $(ALL_CCFLAGS) $(GENCODE_FLAGS) -DL2_ONLY -o $@ -c $<
 
 main.o:main.cpp
 	$(EXEC) $(NVCC) $(INCLUDES) $(ALL_CCFLAGS) $(GENCODE_FLAGS) -o $@ -c $<
